syntax = "proto3";
package com.example.user.model.v1;
option go_package = "com.example/usersvcapi/v1";

message UserWrite {
    string name = 1;
    UserType type = 2;
}

message UserRead {
    string id = 1;
    string name = 2;
    UserType type = 3;
}

enum UserType {
    USER_TYPE_UNKNOWN = 0;
    USER_TYPE_ADMIN = 1;
    USER_TYPE_USER = 2;
}
