syntax = "proto3";
package com.example.user.service.v1;
option go_package = "com.example/usersvcapi/v1";

import "user_model.proto";
import "google/api/annotations.proto";

service UserService {

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "user"
        };
    }

    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
}

message CreateUserRequest {
    com.example.user.model.v1.UserWrite user = 1;    
}

message CreateUserResponse {
    string id = 1;    
}

message GetUsersRequest {
}

message GetUsersResponse {
    repeated com.example.user.model.v1.UserRead users = 1;
}
